--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,9 +8,11 @@
 
     <Button
         android:id="@+id/btn_logout"
-        android:layout_width="160dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="294dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginBottom="250dp"
         android:background="@drawable/buttonround"
         android:text="로그아웃"
         android:textColor="#FFFFFF"
@@ -25,9 +27,11 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="355dp"
-        android:layout_marginBottom="13dp"
+        android:layout_marginTop="347dp"
+        android:layout_marginBottom="52dp"
         android:text="로그인 성공!"
+        android:textColor="#000000"
+        android:textSize="25sp"
         app:layout_constraintBottom_toTopOf="@+id/btn_logout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
